fix padding and spacing

--- a/web/css/checkout.css
+++ b/web/css/checkout.css
@@ -1,6 +1,6 @@
 main {
 	gap: 20px;
-	padding: 40px 20px 80px 20px;
+	padding: 93px 20px 80px 20px;
 }
 
 #cart-items {
