--- a/web/css/shop.css
+++ b/web/css/shop.css
@@ -29,6 +29,7 @@ main {
 	flex-wrap: wrap;
 	gap: 20px;
 	padding: 0 20px 80px 20px;
+	max-width: 100%;
 }
 
 #product-list a {
